# Embed2-Opdracht1

./: README.md
Examples/Input_log/Source/: CMakeLists.txt  main.c  mariadb-test.c
Examples/uitbreiding_libgpio/: CMakeLists.txt  main.c
